--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,11 @@
 app==0.0.1
 blinker==1.8.2
+certifi==2024.12.14
+cffi==1.17.1
 click==8.1.7
+cloudinary==1.41.0
 colorama==0.4.6
+cryptography==44.0.0
 Flask==3.0.3
 Flask-Admin==1.6.1
 Flask-Login==0.6.3
@@ -10,9 +14,12 @@ importlib_metadata==8.5.0
 itsdangerous==2.2.0
 Jinja2==3.1.4
 MarkupSafe==3.0.2
+pycparser==2.22
 PyMySQL==1.1.1
+six==1.17.0
 SQLAlchemy==2.0.36
 typing_extensions==4.12.2
+urllib3==2.3.0
 Werkzeug==3.0.5
 WTForms==3.1.2
 zipp==3.20.2
