--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,14 @@
+aiohappyeyeballs==2.4.4
+aiohttp==3.11.11
+aiohttp-retry==2.8.3
+aiosignal==1.3.1
 app==0.0.1
+async-timeout==4.0.3
+attrs==23.2.0
 blinker==1.8.2
-certifi==2024.12.14
+certifi==2024.2.2
 cffi==1.17.1
+charset-normalizer==3.3.2
 click==8.1.7
 cloudinary==1.41.0
 colorama==0.4.6
@@ -10,16 +17,24 @@ Flask==3.0.3
 Flask-Admin==1.6.1
 Flask-Login==0.6.3
 Flask-SQLAlchemy==3.1.1
+frozenlist==1.4.1
+idna==3.6
 importlib_metadata==8.5.0
 itsdangerous==2.2.0
 Jinja2==3.1.4
 MarkupSafe==3.0.2
+multidict==6.0.5
+propcache==0.2.1
 pycparser==2.22
+PyJWT==2.8.0
 PyMySQL==1.1.1
+requests==2.31.0
 six==1.17.0
 SQLAlchemy==2.0.36
+twilio==8.13.0
 typing_extensions==4.12.2
-urllib3==2.3.0
+urllib3==2.2.0
 Werkzeug==3.0.5
 WTForms==3.1.2
+yarl==1.9.4
 zipp==3.20.2
